# Mod-Assets-Materials

./: CMakeLists.txt  README.md
source/: CGeneratorMaterial.cpp  CGeneratorMaterial.hpp  Common.hpp  GLSL.cpp  GLSL.hpp  GLSL.inl  Material.cpp  Material.hpp  MaterialLibrary.cpp  MaterialLibrary.hpp  Node.cpp  Node.hpp  Node.inl  Symbol.hpp  Symbol.inl
source/nodes/: Camera.cpp  Camera.hpp  FBM.cpp  FBM.hpp  Light.cpp  Light.hpp  Raster.cpp  Raster.hpp  Raycast.cpp  Raycast.hpp  Raymarch.cpp  Raymarch.hpp  Raytrace.cpp  Raytrace.hpp  Root.cpp  Root.hpp  Scene.cpp  Scene.hpp  SceneLines.cpp  SceneLines.hpp  SceneSDF.cpp  SceneSDF.hpp  SceneTriangles.cpp  SceneTriangles.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Value.cpp  Value.hpp
test/: CMakeLists.txt  Main.cpp  Main.hpp  TestGLSL.cpp  TestMaterial.cpp  TestMod.cpp
